--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.6.0",
+    "react-modal": "^3.16.1",
     "react-photo-view": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.5",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
