--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-photo-view": "^1.2.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "reactjs-popup": "^2.0.5",
+    "stars-rating": "^1.1.0",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
